# SMITH

SMITH_FRAMEWORK/: FRAMEWORK_AUDIT_REPORT.md  LICENSE  README.md  config.yaml  interactive_cockpit.py  pyproject.toml  requirements.txt  run_cockpit_test.sh  run_in_gemini.sh  tui_poc.py
SMITH_FRAMEWORK/DOCX/: AGENT_CONTEXT_PROTOCOL.md  CONVERSATION_LOG.md  SMITH_4.0_ARCHITECTURE.md  agent_alignment.md  gemini_task_log.md  init_agent_env.sh
SMITH_FRAMEWORK/DOCX/design/: project_navigator_design.md
SMITH_FRAMEWORK/smith/: __init__.py
SMITH_FRAMEWORK/smith/adapters/: __init__.py  llm_local.py
SMITH_FRAMEWORK/smith/core/: __init__.py  fsm.py  memory.py  planner.py  registry.py
SMITH_FRAMEWORK/smith/io/: __init__.py  cli.py  config.py  telemetry.py
SMITH_FRAMEWORK/smith/runtime/: __init__.py  policies.py  sandbox.py
SMITH_FRAMEWORK/smith/tools/: __init__.py  files.py  shell.py
SMITH_FRAMEWORK/smith/utils/: __init__.py  errors.py  time.py
SMITH_FRAMEWORK/smith_tools/: code_modifier.py  code_ops.py  context_engine.py  dynamic_planner.py  fallback_strategies.py  filelock.py  human_feedback_tool.py  mcp_gateway.py  meta_generator.py  plan_executor.py  project_navigator.py  project_verifier.py  prompt_parser.py  safety_checks.py  smith_agent.py  smith_agent_stage1.py  task_manager.py
SMITH_FRAMEWORK/smith_tools/tests/: test_code_ops.py  test_context_engine.py  test_dynamic_planner.py.disabled  test_mcp_gateway.py  test_plan_executor.py  test_task_manager.py
SMITH_FRAMEWORK/tests/: __init__.py  test_cockpit_integration.py  test_placeholder.py
