[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smith"
version = "0.1.0"
description = "SMITH agent scaffolding with FSM, planner, tools, and policies."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT License" }
dependencies = [
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.0",
    "ruff>=0.1.0",
    "mypy>=1.8",
]

[project.scripts]
smith = "smith.io.cli:app"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["D"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "typer"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "smith.io.cli"
allow_untyped_decorators = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "tests",
]
